# aughit

./: 135 x 30 ( approx ).txt  Aughit_Participant_Copy.cpp  CMakeLists.txt  Makefile  Makefile~  Matlab code for Image Processing and Aiming Algo  MyContactListener.cpp  MyContactListener.h  README.md  Test.avi  a.avi  a.out  aughit  aughit_round3.cpp  aughit_round_1_and_2.cpp  b.avi  c.avi  code.cpp  new  new.cpp  opencvtest  opencvtest.cpp  opencvtt.cpp  round3  round3.cpp  sockettry.cpp  vidconv.cpp  vidplay  vidplay.cpp
Files/: ClearVid.sh
NetCV/: ReadMe.rtf  client.cpp  client.out  netcvc.out  netcvs.out  server.cpp  server.out
NetCV/netcvc.out.dSYM/Contents/: Info.plist
NetCV/netcvc.out.dSYM/Contents/Resources/DWARF/: netcvc.out
NetCV/netcvs.out.dSYM/Contents/: Info.plist
NetCV/netcvs.out.dSYM/Contents/Resources/DWARF/: netcvs.out
Video/: a.avi  b.avi  c.avi  d.avi  e.avi  f.avi  g.avi  h.avi  i.avi  j.avi  k.avi  l.avi  m.avi  n.avi  o.avi  p.avi  q.avi  r.avi  s.avi  t.avi  u.avi  v.avi  w.avi  x.avi  y.avi  z.avi  {.avi  |.avi  }.avi  ~.avi  .avi
__MACOSX/NetCV/: ._ReadMe.rtf  ._netcvs.out.dSYM
src/: ClassesC.h  ClassesR.h  Constants.h  Functions.h  Round1Circular.cpp  Round1Rectangular.cpp  Round2Circular.cpp  Round2Rectangular.cpp  Round3Circular.cpp  Round3Rectangular.cpp
