cmake_minimum_required (VERSION 2.6)
project (AugHit)
find_package(OpenCV REQUIRED)
include_directories (${Box2D_SOURCE_DIR})
set (CMAKE_CXX_FLAGS "-fpermissive")
file(MAKE_DIRECTORY build/Video)
configure_file(Files/Images/gameover.jpg gameover.jpg COPYONLY)
configure_file(Files/ClearVid.sh ClearVid.sh COPYONLY)
add_executable(Round1Rectangular src/Round1Rectangular.cpp)
add_executable(Round2Rectangular src/Round2Rectangular.cpp)
add_executable(Round3Rectangular src/Round3Rectangular.cpp)
add_executable(Round1Circular src/Round1Circular.cpp)
add_executable(Round2Circular src/Round2Circular.cpp)
add_executable(Round3Circular src/Round3Circular.cpp)
target_link_libraries(Round1Circular ${OpenCV_LIBS} Box2D)
target_link_libraries(Round1Rectangular ${OpenCV_LIBS} Box2D)
target_link_libraries(Round2Rectangular ${OpenCV_LIBS} Box2D)
target_link_libraries(Round3Rectangular ${OpenCV_LIBS} Box2D)
target_link_libraries(Round2Circular ${OpenCV_LIBS} Box2D)
target_link_libraries(Round3Circular ${OpenCV_LIBS} Box2D)
